--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
+    "mongoosh": "^0.0.7",
     "nodemon": "^3.1.0"
   }
 }
