--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "mongoosh": "^0.0.7",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
