cart show and quantity increment and decrement added and 404 page added

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ AUTH_EMAIL = mhdmuflihkk@gmail.com
 AUTH_PASSWORD = tnmy fzxf csvk brya
 
 sessionSecret = 'AllisWell'
+
+mongoURl = "mongodb://127.0.0.1:27017/KIONA"
