--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "mailgen": "^2.0.28",
     "mongoosh": "^0.0.7",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
