--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "mailgen": "^2.0.28",
     "mongoosh": "^0.0.7",
     "morgan": "^1.10.0",
