--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ PORT = 8000
 AUTH_EMAIL = mhdmuflihkk@gmail.com
 AUTH_PASSWORD = tnmy fzxf csvk brya
 
-sessionSecret = 'AllisWell'
+sessionSecretUser = 'AllisWell'
 
 mongoURl = "mongodb://127.0.0.1:27017/KIONA"
