offer and coupon , razor pay , payment order. completed.

--- a/.env
+++ b/.env
@@ -1,8 +1,16 @@
+# my port
 PORT = 8000
 
+# send the email otp
 AUTH_EMAIL = mhdmuflihkk@gmail.com
 AUTH_PASSWORD = tnmy fzxf csvk brya
 
+# razorpay payment gateway instance id and secret
+ID = "rzp_test_FRaUz1vihG1Qvx"
+SECRET = "nuvwbLogUjNjYJEXtu5BR6dp"
+
+# session secret
 sessionSecretUser = 'AllisWell'
 
+# mongo db connection
 mongoURl = "mongodb://127.0.0.1:27017/KIONA"
