graph added, send to data in atles

--- a/.env
+++ b/.env
@@ -13,4 +13,6 @@ SECRET = "nuvwbLogUjNjYJEXtu5BR6dp"
 sessionSecretUser = 'AllisWell'
 
 # mongo db connection
-mongoURl = "mongodb://127.0.0.1:27017/KIONA"
+# mongoURl = "mongodb://127.0.0.1:27017/KIONA"
+
+mongoURl = "mongodb+srv://mhdmuflihkk:yUlnQN0fyEVl4gXW@cluster0.psoajpq.mongodb.net/"
